demo/sdl_opengl3/nimnuklear/nuklear.nim


proc filter_default*(a2: ptr text_edit; unicode: rune): cint {.cdecl,
    importc: "nk_filter_default", header: headernuklear.}
proc filter_ascii*(a2: ptr text_edit; unicode: rune): cint {.cdecl,
    importc: "nk_filter_ascii", header: headernuklear.}
proc filter_float*(a2: ptr text_edit; unicode: rune): cint {.cdecl,
    importc: "nk_filter_float", header: headernuklear.}
proc filter_decimal*(a2: ptr text_edit; unicode: rune): cint {.cdecl,
    importc: "nk_filter_decimal", header: headernuklear.}
proc filter_hex*(a2: ptr text_edit; unicode: rune): cint {.cdecl,
    importc: "nk_filter_hex", header: headernuklear.}
proc filter_oct*(a2: ptr text_edit; unicode: rune): cint {.cdecl,
    importc: "nk_filter_oct", header: headernuklear.}
proc filter_binary*(a2: ptr text_edit; unicode: rune): cint {.cdecl,
    importc: "nk_filter_binary", header: headernuklear.}
proc textedit_init_default*(a2: ptr text_edit) {.cdecl,
    importc: "nk_textedit_init_default", header: headernuklear.}
proc textedit_init*(a2: ptr text_edit; a3: ptr allocator; size: size) {.cdecl,
    importc: "nk_textedit_init", header: headernuklear.}
proc textedit_init_fixed*(a2: ptr text_edit; memory: pointer; size: size) {.cdecl,
    importc: "nk_textedit_init_fixed", header: headernuklear.}
proc textedit_free*(a2: ptr text_edit) {.cdecl, importc: "nk_textedit_free",
                                     header: headernuklear.}
proc textedit_text*(a2: ptr text_edit; a3: cstring; total_len: cint) {.cdecl,
    importc: "nk_textedit_text", header: headernuklear.}
proc textedit_delete*(a2: ptr text_edit; where: cint; len: cint) {.cdecl,
    importc: "nk_textedit_delete", header: headernuklear.}
proc textedit_delete_selection*(a2: ptr text_edit) {.cdecl,
    importc: "nk_textedit_delete_selection", header: headernuklear.}
proc textedit_select_all*(a2: ptr text_edit) {.cdecl,
    importc: "nk_textedit_select_all", header: headernuklear.}
proc textedit_cut*(a2: ptr text_edit): cint {.cdecl, importc: "nk_textedit_cut",
    header: headernuklear.}
proc textedit_paste*(a2: ptr text_edit; a3: cstring; len: cint): cint {.cdecl,
    importc: "nk_textedit_paste", header: headernuklear.}
proc textedit_undo*(a2: ptr text_edit) {.cdecl, importc: "nk_textedit_undo",
                                     header: headernuklear.}
proc textedit_redo*(a2: ptr text_edit) {.cdecl, importc: "nk_textedit_redo",
                                     header: headernuklear.}






proc stroke_line*(b: ptr command_buffer; x0: cfloat; y0: cfloat; x1: cfloat; y1: cfloat;
                 line_thickness: cfloat; a8: color) {.cdecl,
    importc: "nk_stroke_line", header: headernuklear.}
proc stroke_curve*(a2: ptr command_buffer; a3: cfloat; a4: cfloat; a5: cfloat; a6: cfloat;
                  a7: cfloat; a8: cfloat; a9: cfloat; a10: cfloat;
                  line_thickness: cfloat; a12: color) {.cdecl,
    importc: "nk_stroke_curve", header: headernuklear.}
proc stroke_rect*(a2: ptr command_buffer; a3: rect; rounding: cfloat;
                 line_thickness: cfloat; a6: color) {.cdecl,
    importc: "nk_stroke_rect", header: headernuklear.}
proc stroke_circle*(a2: ptr command_buffer; a3: rect; line_thickness: cfloat; a5: color) {.
    cdecl, importc: "nk_stroke_circle", header: headernuklear.}
proc stroke_arc*(a2: ptr command_buffer; cx: cfloat; cy: cfloat; radius: cfloat;
                a_min: cfloat; a_max: cfloat; line_thickness: cfloat; a9: color) {.
    cdecl, importc: "nk_stroke_arc", header: headernuklear.}
proc stroke_triangle*(a2: ptr command_buffer; a3: cfloat; a4: cfloat; a5: cfloat;
                     a6: cfloat; a7: cfloat; a8: cfloat; line_thichness: cfloat;
                     a10: color) {.cdecl, importc: "nk_stroke_triangle",
                                 header: headernuklear.}
proc stroke_polyline*(a2: ptr command_buffer; points: ptr cfloat; point_count: cint;
                     line_thickness: cfloat; col: color) {.cdecl,
    importc: "nk_stroke_polyline", header: headernuklear.}
proc stroke_polygon*(a2: ptr command_buffer; a3: ptr cfloat; point_count: cint;
                    line_thickness: cfloat; a6: color) {.cdecl,
    importc: "nk_stroke_polygon", header: headernuklear.}
proc fill_rect*(a2: ptr command_buffer; a3: rect; rounding: cfloat; a5: color) {.cdecl,
    importc: "nk_fill_rect", header: headernuklear.}
proc fill_rect_multi_color*(a2: ptr command_buffer; a3: rect; left: color; top: color;
                           right: color; bottom: color) {.cdecl,
    importc: "nk_fill_rect_multi_color", header: headernuklear.}
proc fill_circle*(a2: ptr command_buffer; a3: rect; a4: color) {.cdecl,
    importc: "nk_fill_circle", header: headernuklear.}
proc fill_arc*(a2: ptr command_buffer; cx: cfloat; cy: cfloat; radius: cfloat;
              a_min: cfloat; a_max: cfloat; a8: color) {.cdecl, importc: "nk_fill_arc",
    header: headernuklear.}
proc fill_triangle*(a2: ptr command_buffer; x0: cfloat; y0: cfloat; x1: cfloat;
                   y1: cfloat; x2: cfloat; y2: cfloat; a9: color) {.cdecl,
    importc: "nk_fill_triangle", header: headernuklear.}
proc fill_polygon*(a2: ptr command_buffer; a3: ptr cfloat; point_count: cint; a5: color) {.
    cdecl, importc: "nk_fill_polygon", header: headernuklear.}
proc draw_image*(a2: ptr command_buffer; a3: rect; a4: ptr img; a5: color) {.cdecl,
    importc: "nk_draw_image", header: headernuklear.}
proc draw_text*(a2: ptr command_buffer; a3: rect; text: cstring; len: cint;
               a6: ptr user_font; a7: color; a8: color) {.cdecl,
    importc: "nk_draw_text", header: headernuklear.}
proc push_scissor*(a2: ptr command_buffer; a3: rect) {.cdecl,
    importc: "nk_push_scissor", header: headernuklear.}
proc push_custom*(a2: ptr command_buffer; a3: rect; a4: command_custom_callback;
                 usr: handle) {.cdecl, importc: "nk_push_custom",
                              header: headernuklear.}





proc input_has_mouse_click*(a2: ptr input; a3: buttons): cint {.cdecl,
    importc: "nk_input_has_mouse_click", header: headernuklear.}
proc input_has_mouse_click_in_rect*(a2: ptr input; a3: buttons; a4: rect): cint {.cdecl,
    importc: "nk_input_has_mouse_click_in_rect", header: headernuklear.}
proc input_has_mouse_click_down_in_rect*(a2: ptr input; a3: buttons; a4: rect;
                                        down: cint): cint {.cdecl,
    importc: "nk_input_has_mouse_click_down_in_rect", header: headernuklear.}
proc input_is_mouse_click_in_rect*(a2: ptr input; a3: buttons; a4: rect): cint {.cdecl,
    importc: "nk_input_is_mouse_click_in_rect", header: headernuklear.}
proc input_is_mouse_click_down_in_rect*(i: ptr input; id: buttons; b: rect; down: cint): cint {.
    cdecl, importc: "nk_input_is_mouse_click_down_in_rect", header: headernuklear.}
proc input_any_mouse_click_in_rect*(a2: ptr input; a3: rect): cint {.cdecl,
    importc: "nk_input_any_mouse_click_in_rect", header: headernuklear.}
proc input_is_mouse_prev_hovering_rect*(a2: ptr input; a3: rect): cint {.cdecl,
    importc: "nk_input_is_mouse_prev_hovering_rect", header: headernuklear.}
proc input_is_mouse_hovering_rect*(a2: ptr input; a3: rect): cint {.cdecl,
    importc: "nk_input_is_mouse_hovering_rect", header: headernuklear.}
proc input_mouse_clicked*(a2: ptr input; a3: buttons; a4: rect): cint {.cdecl,
    importc: "nk_input_mouse_clicked", header: headernuklear.}
proc input_is_mouse_down*(a2: ptr input; a3: buttons): cint {.cdecl,
    importc: "nk_input_is_mouse_down", header: headernuklear.}
proc input_is_mouse_pressed*(a2: ptr input; a3: buttons): cint {.cdecl,
    importc: "nk_input_is_mouse_pressed", header: headernuklear.}
proc input_is_mouse_released*(a2: ptr input; a3: buttons): cint {.cdecl,
    importc: "nk_input_is_mouse_released", header: headernuklear.}
proc input_is_key_pressed*(a2: ptr input; a3: keys): cint {.cdecl,
    importc: "nk_input_is_key_pressed", header: headernuklear.}
proc input_is_key_released*(a2: ptr input; a3: keys): cint {.cdecl,
    importc: "nk_input_is_key_released", header: headernuklear.}
proc input_is_key_down*(a2: ptr input; a3: keys): cint {.cdecl,
    importc: "nk_input_is_key_down", header: headernuklear.}
type
  draw_index* = ushort
  draw_list_stroke* {.size: sizeof(cint).} = enum
    STROKE_OPEN = false, STROKE_CLOSED = true

const
  FORMAT_R8G8B8 = FORMAT_COLOR_BEGIN
  FORMAT_COLOR_END = FORMAT_RGBA32
